# otus_c_plus_hw7

./: .gitignore
.github/workflows/: run_hw7.yml
hm7/: CMakeLists.txt  CMakePresets.json  main.cpp  version.h.in
hm7/src/: CmdFileWriter.cpp  CmdParserState.cpp  CommandParser.cpp  CommandParser.hpp
